--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World
+Welcome to my developer blog
+
+Setting up a developer environment to build Azure based solutions is now very well supported across Windows, Mac and Linux...
+
+[Linux for Azure Developers](https://gloveboxes.github.io/Linux-Ubuntu-18.04-for-Azure-Developers/)
